 - SDL: Fix potential race condition when pressing keys (fixes mgba.io/i/872)
 - GBA: Fix keypad IRQs not firing when extra buttons are pressed
 - GBA Video: Fix broken sprite blending hack (fixes mgba.io/i/532)
 - GBA I/O: Fix reading from a few invalid I/O registers (fixes mgba.io/i/876)
 - GBA Savedata: Fix size of SRAM saves (fixes mgba.io/i/883)
Misc:
 - GBA Timer: Use global cycles for timers
 - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)
 - All: Make FIXED_ROM_BUFFER an option instead of 3DS-only
 - Qt: Don't rebuild library view if style hasn't changed
 - Qt: Redo GameController into multiple classes
 - SDL: Fix 2.0.5 build on macOS under some circumstances
 - Test: Restructure test suite into multiple executables
 - Python: Integrate tests from cinema test suite
 - Util: Don't build crc32 if the function already exists
 - GBA: Detect hardware for Pokémon FireRed ROM hacks
 - CMake: Fix CPack dependencies for libpng 1.6
 - Qt: Allow overrides to be saved before a game is loaded
 - VFS: Make VFile.truncate work growing files on PSV (fixes mgba.io/i/885)

0.6.0: (2017-07-16)
Features:
 - Library view
 - Sprite viewer
 - Debugging console
 - Improved memory viewer
 - Memory search
 - Command line ability to override configuration values
 - Add option to allow preloading the entire ROM before running
 - Add option for whether rewinding restores save games
 - Savestates now contain any RTC override data
 - Add option to lock video to integer scaling
 - LR35902: Watchpoints
 - LR35902/GB-Z80 disassembler
 - GB: Tile viewer
 - GB: Video/audio channel enabling/disabling
 - GB: Symbol table support
 - GB MBC: Add MBC1 multicart support
 - GBA: Support printing debug strings from inside a game
 - GBA: Better cheat type autodetection
 - Implement keypad interrupts
 - Configuration of gamepad hats
 - Video log recording for testing and bug reporting
 - Debugger: Segment/bank support
 - Debugger: Execution tracing