@@ -66,6 +66,7 @@ struct LR35902InterruptHandler {
 	void (*reset)(struct LR35902Core* cpu);
 	void (*processEvents)(struct LR35902Core* cpu);
 	void (*setInterrupts)(struct LR35902Core* cpu, bool enable);
+	uint16_t (*irqVector)(struct LR35902Core* cpu);
 	void (*halt)(struct LR35902Core* cpu);
 	void (*stop)(struct LR35902Core* cpu);
 
@@ -118,7 +119,6 @@ struct LR35902Core {
 	LR35902Instruction instruction;
 
 	bool irqPending;
-	uint16_t irqVector;
 
 	struct LR35902Memory memory;
 	struct LR35902InterruptHandler irqh;
@@ -136,7 +136,7 @@ void LR35902HotplugAttach(struct LR35902Core* cpu, size_t slot);
 void LR35902HotplugDetach(struct LR35902Core* cpu, size_t slot);
 
 void LR35902Reset(struct LR35902Core* cpu);
-void LR35902RaiseIRQ(struct LR35902Core* cpu, uint8_t vector);
+void LR35902RaiseIRQ(struct LR35902Core* cpu);
 
 void LR35902Tick(struct LR35902Core* cpu);
 void LR35902Run(struct LR35902Core* cpu);
