@@ -44,6 +44,7 @@ Bugfixes:
  - GBA Video: Fix broken sprite blending hack (fixes mgba.io/i/532)
  - GBA I/O: Fix reading from a few invalid I/O registers (fixes mgba.io/i/876)
  - GBA Savedata: Fix size of SRAM saves (fixes mgba.io/i/883)
+ - GB: Revamp IRQ handling based on new information
 Misc:
  - GBA Timer: Use global cycles for timers
  - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)
